[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Overlay/ShowSomething.gd" type="Script" id=1]

[node name="ShowSomething" type="Popup"]
pause_mode = 2
popup_exclusive = true
script = ExtResource( 1 )

[node name="TextureToShow" type="TextureRect" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="ShowTexture" from="." to="." method="_on_ShowSometing_ShowTexture"]
